# tract-python

./: .bumpversion.cfg  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_run.py
tests/assets/: mul.onnx  mul2.nnef.tgz  resnet50.onnx
tract_python/: __init__.py
