[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "tract-python"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "science"
]

dependencies = ["cffi", "numpy"]

description = "bindings of sonos/tract rust NN inference enging for python"

license = "MIT"

[tool.maturin]
bindings = "cffi"
